# x-cli-scratch

./: Cargo.toml  README.md  TASKS.md  flake.nix
src/: main.rs
