[package]
authors = ["Sridhar Ratnakumar <srid@srid.ca>"]
edition = "2018"
# If you change the name here, you must also do it in flake.nix
name = "x"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
clap = "2.33.3"
directories = "3.0.1"
exitfailure = "0.5.1"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = ""

[dependencies.rustbreak]
features = ["yaml_enc"]
version = "2"
